<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.qa.openWeatherMap</groupId>
  <artifactId>openWeatherMap-web</artifactId>
  <packaging>jar</packaging>
  <version>1.0-SNAPSHOT</version>
  <name>openWeatherMap-web</name>
  <url>http://maven.apache.org</url>
  
  <properties>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
  </properties>
  
<profiles>
	<profile>
		<id>Smoke</id>
		<build>
    <pluginManagement>
      <plugins>
      <!-- we want sources to be processed by a specific 1.8 javac -->
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.8.0</version>
            	<configuration>
              		<verbose>true</verbose>
              		<fork>true</fork>
              		<executable>${JAVA_HOME}/bin/javac</executable>
              		<compilerVersion>1.3</compilerVersion>
            	</configuration>
        	</plugin>
      		<plugin>
			<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
					<configuration>
						<mainClass>BuyAGiftFramework.utilities.SendEmailFile</mainClass>
					</configuration>
				</plugin>
        	<plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
            <configuration>
    			<forkCount>3</forkCount>
    			<reuseForks>true</reuseForks>
    			<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
    			 <suiteXmlFiles>
            	<suiteXmlFile>testng.xml</suiteXmlFile>
            	</suiteXmlFiles>
  			</configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
	</profile>
</profiles>
  
  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
    </dependency>
     <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
	<dependency>
    	<groupId>org.seleniumhq.selenium</groupId>
    	<artifactId>selenium-java</artifactId>
    	<version>3.3.0</version>
	</dependency>
	 <dependency>
        <groupId>org.seleniumhq.selenium</groupId>
        <artifactId>selenium-api</artifactId>
        <version>3.3.0</version>
    </dependency>
     <dependency>
        <groupId>org.seleniumhq.selenium</groupId>
        <artifactId>selenium-server</artifactId>
        <version>3.3.0</version>
    </dependency>
    <dependency>
        <groupId>org.seleniumhq.selenium</groupId>
        <artifactId>selenium-support</artifactId>
        <version>3.3.0</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
	<dependency>
    	<groupId>org.testng</groupId>
    	<artifactId>testng</artifactId>
    	<version>6.14.2</version>
    	<scope>test</scope>
	</dependency>
    <!-- https://mvnrepository.com/artifact/log4j/log4j -->
	<dependency>
    	<groupId>log4j</groupId>
    	<artifactId>log4j</artifactId>
    	<version>1.2.17</version>
	</dependency>
  	<!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
    <dependency>
        <groupId>org.apache.poi</groupId>
        <artifactId>poi</artifactId>
        <version>3.16</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
    <dependency>
        <groupId>org.apache.poi</groupId>
        <artifactId>poi-ooxml</artifactId>
        <version>3.16</version>
    </dependency>
    <dependency>
    	<groupId>commons-io</groupId>
    	<artifactId>commons-io</artifactId>
    	<version>2.5</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/com.relevantcodes/extentreports -->
	<dependency>
    	<groupId>com.relevantcodes</groupId>
    	<artifactId>extentreports</artifactId>
    	<version>2.40.2</version>
	</dependency>
	<dependency>
    	<groupId>com.aventstack</groupId>
    	<artifactId>extentreports</artifactId>
    	<version>3.1.5</version>
	</dependency>
	<!-- pom.xml -->
	<dependency>
    	<groupId>org.freemarker</groupId>
    	<artifactId>freemarker</artifactId>
    	<version>2.3.28</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
	<dependency>
    	<groupId>mysql</groupId>
    	<artifactId>mysql-connector-java</artifactId>
    	<version>5.1.39</version>
	</dependency>
	<!-- These are the cucumber dependencies -->
	<dependency>
		<groupId>info.cukes</groupId>
		<artifactId>cucumber-java</artifactId>
		<version>1.2.5</version>
	</dependency>
	<dependency>
		<groupId>info.cukes</groupId>
		<artifactId>cucumber-junit</artifactId>
		<version>1.2.5</version>
	</dependency>
	<dependency>
   		<groupId>com.sun</groupId>
   		<artifactId>tools</artifactId>
   		<version>1.8</version>
   		<scope>system</scope>
   		<systemPath>${env.JAVA_HOME}\lib\tools.jar</systemPath>
 	</dependency>
 	<dependency>
		<groupId>info.cukes</groupId>
		<artifactId>cucumber-jvm</artifactId>
		<version>1.1.5</version>
		<type>pom</type>
	</dependency>
	<dependency>
			<groupId>net.sourceforge.cobertura</groupId>
			<artifactId>cobertura</artifactId>
			<version>2.1.1</version>
	</dependency>
	<dependency>
		<groupId>info.cukes</groupId>
		<artifactId>cucumber-jvm-deps</artifactId>
		<version>1.0.5</version>
	</dependency>
	<dependency>
			<groupId>net.masterthought</groupId>
			<artifactId>cucumber-reporting</artifactId>
			<version>1.0.0</version>
	</dependency>
	<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>gherkin</artifactId>
			<version>2.12.2</version>
	</dependency>
	<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-all</artifactId>
			<version>2.0.2-beta</version>
	</dependency>
	<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-testng</artifactId>
			<version>1.2.5</version>
	</dependency>
	<dependency>
    			<groupId>info.cukes</groupId>
    			<artifactId>cucumber-core</artifactId>
    			<version>1.2.5</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/com.vimalselvam/cucumber-extentsreport -->
	<dependency>
    		<groupId>com.vimalselvam</groupId>
    		<artifactId>cucumber-extentsreport</artifactId>
    		<version>3.0.2</version>
	</dependency>	
	<!-- https://mvnrepository.com/artifact/com.jayway.jsonpath/json-path -->
	<dependency>
    		<groupId>com.jayway.jsonpath</groupId>
    		<artifactId>json-path</artifactId>
    		<version>2.4.0</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.json/json -->
	<dependency>
    		<groupId>org.json</groupId>
    		<artifactId>json</artifactId>
    		<version>20180813</version>
	</dependency>
	<dependency>
    		<groupId>com.googlecode.json-simple</groupId>
    		<artifactId>json-simple</artifactId>
    		<version>1.1.1</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-java -->
	<dependency>
    		<groupId>io.cucumber</groupId>
    		<artifactId>cucumber-java</artifactId>
    		<version>4.2.0</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
	<dependency>
    		<groupId>org.mockito</groupId>
    		<artifactId>mockito-core</artifactId>
    		<version>2.23.4</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-junit -->
	<dependency>
    		<groupId>io.cucumber</groupId>
    		<artifactId>cucumber-junit</artifactId>
    		<version>4.2.0</version>
	</dependency>
	<dependency>
           <groupId>com.google.code.gson</groupId>
           <artifactId>gson</artifactId>
           <version>2.2.4</version>
     </dependency>
  </dependencies>
</project>
